# Factory-Management-System

./: .mcp.json  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
backend/: .env.example  create_tables.py  main.py
backend/api/: __init__.py  auth.py  factory.py  health.py  inventory.py  parts.py  purchases.py  staff.py  suppliers.py  users.py  warehouses.py
backend/docs/: auth_design.md  auth_role_dep_design.md  factory_api_design.md  fk_handling_ui.md  sample_data.md  supabase_auth_integration.md  user_permission_page.md
backend/schemas/: __init__.py  common.py  inventory.py  part.py  purchase.py  staff.py  supplier.py  user.py  warehouse.py
backend/services/: __init__.py  auth.py  auth_deps.py  inventory.py  parts.py  purchases.py  staff.py  suppliers.py  users.py  warehouses.py
backend/src/: __init__.py
backend/src/db/: DB_CHANGE_FLOW.md  DB_SCHEMA.md  USER_TABLE_DESIGN.md  __init__.py  create_tables.py  database.py  ddl_add_timestamps.sql  models.py  seed_data.py
docs/: 实验4 工厂场景的管理信息系统（MIS）设计与开发.docx
frontend/: .env.example  REACT_DEVELOPMENT_GUIDE.md  README.md  package-lock.json  package.json
frontend/docs/: dev_proxy_setup.md  supabase_auth_frontend.md
frontend/public/: index.html
frontend/src/: App.tsx  setupProxy.js
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  Inventory.tsx  Login.tsx  Parts.tsx  Purchases.tsx  Register.tsx  Staff.tsx  Suppliers.tsx  (+2 more)
reports/: MIS_report.md  backend_business_design.md  full.md
(+8 files in other folders)
